--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -1,7 +1,8 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  creationTimestamp: null
+  creationTimestamp:
   annotations:
     fluxcd.io/tag.city-rest-api: semver:~1.1
     fluxcd.io/automated: 'true'
@@ -16,15 +17,15 @@ spec:
   strategy: {}
   template:
     metadata:
-      creationTimestamp: null
+      creationTimestamp:
       labels:
         app: city-rest-api
     spec:
       containers:
-      - image: sandipdocker1990/city-rest-api-gitops:1.1.0
+      - image: sandipdocker1990/city-rest-api-gitops:1.1.1
         name: city-rest-api
         imagePullPolicy: Always
         resources: {}
         ports:
-          - containerPort: 8002
+        - containerPort: 8002
 status: {}
