--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -3,9 +3,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   creationTimestamp:
-  # annotations:
-  #   fluxcd.io/tag.city-rest-api: semver:~1.1
-  #   fluxcd.io/automated: 'true'
+   annotations:
+     fluxcd.io/tag.city-rest-api: semver:~1.1
+     fluxcd.io/automated: 'true'
   labels:
     app: city-rest-api
   name: city-rest-api
